--- a/app/views/admin/pages/_fields.html.haml
+++ b/app/views/admin/pages/_fields.html.haml
@@ -12,7 +12,19 @@
     .drawer
       .drawer_contents#attributes
         %table.fieldset
-          = render :partial => "meta_row", :collection => @meta, :locals => {:f => fields}
+          %tr
+            %th.label
+              %label{:for=>"page_slug"}= t('slug')
+            %td.field= fields.text_field :slug, :class => 'textbox', :maxlength => 100
+            %td.actions
+          %tr
+            %th.label
+              %label{:for=>"page_breadcrumb"}= t('breadcrumb')
+            %td.field= fields.text_field :breadcrumb, :class => 'textbox', :maxlength => 160
+            %td.actions
+              - if @page.metas.none?
+                %img{:src=>"/images/admin/plus_grey.png", :alt=>"Add Attribute", :title=>""}/
+          = render :partial => "meta_row", :collection => @page.metas, :locals => {:f => fields}
           = render_region :extended_metadata, :locals => {:f => fields}
       .drawer_handle
         %a.toggle{:href=>'#attributes', :rel=>"toggle[attributes]", :class=>"#{(meta_errors? ? 'less' : 'more')}"}= meta_label
